--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <body>
 
         <div class="topnav">
-            <a  href="C:\Web_Development\Navbar\About.html">about</a>
+            <a  href="About.html">about</a>
             <a class="active"href="#Contacts">Contacts</a>
             <a href="#News">News</a>
             <a href="#Home">Home</a>
