--- a/News.html
+++ b/News.html
@@ -9,7 +9,7 @@
 
         <div class="topnav">
             <a  href="#about">about</a>
-            <a href="C:\Web_Development\Navbar\Contact.html">Contacts</a>
+            <a href="Contact.html">Contacts</a>
             <a class="active"href="#News">News</a>
             <a href="#Home">Home</a>
         </div> 
