--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="topnav">
             <a  href="#about">about</a>
             <a href="#Contacts">Contacts</a>
-            <a href="C:\Web_Development\Navbar\News.html">News</a>
+            <a href="News.html">News</a>
             <a class="active" href="#Home">Home</a>  
         </div>          
     </body>   
