--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
       <ul class="nav-links">
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="Services.html">Services</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="body-text"><h1>This is Home Page!</h1></div>
