--- a/About.html
+++ b/About.html
@@ -15,9 +15,9 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a class="active" href="About.html">About</a></li>
+        <li><a href="Services.html">Services</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="body-text"><h1>This is About Page!</h1></div>
