--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css" />
-    <title>Services</title>
+    <title>Contacts</title>
   </head>
   <body>
     <nav>
@@ -14,9 +14,9 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a  href="services.html">Services</a></li>
-        <li><a class="active" href="contact.html">Contact</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a  href="Services.html">Services</a></li>
+        <li><a class="active" href="Contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="body-text"><h1>This is Contacts Page!</h1></div>
