--- a/Services.html
+++ b/Services.html
@@ -14,9 +14,9 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a class="active" href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a class="active" href="Services.html">Services</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="body-text"><h1>This is Services Page!</h1></div>
