--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"/>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="Style.css" />
     <title>Home</title>
   </head>
   <body>
